# ndhcpd

./: .gitignore  AUTHENTICATION.md  CROSS_COMPILATION.md  Cargo.toml  INSTALL.md  Makefile  QUICKSTART.md  README.md  config.example.yaml  ndhcpd.rc  ndhcpd.service
.cargo/: config.toml
crates/dhcp-cli/src/: client.rs
crates/dhcp-cli/src/commands/: range.rs
crates/dhcp-server/: Cargo.toml
crates/dhcp-server/src/: config.rs  main.rs
crates/dhcp-server/src/db/: tests.rs
crates/dhcp-server/src/dhcp/: server.rs
crates/dhcp-server/src/handlers/: leases.rs  ranges.rs  static_ips.rs  subnets.rs
crates/ndhcp-cli/: Cargo.toml
crates/ndhcp-cli/src/: client.rs  main.rs
crates/ndhcp-cli/src/commands/: lease.rs  mod.rs  range.rs  static_ip.rs  subnet.rs
crates/ndhcpd/: Cargo.toml  build.rs
crates/ndhcpd/migrations/: 20240101000000_init.sql  20240102000000_api_tokens.sql  20240103000000_ia_prefixes.sql  20240106000000_leases_drop_active.sql
crates/ndhcpd/src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  routes.rs
crates/ndhcpd/src/db/: memory.rs  mod.rs  sqlite.rs  tests.rs
crates/ndhcpd/src/dhcp/: mod.rs  packet.rs  server.rs  test_helpers.rs
crates/ndhcpd/src/handlers/: health.rs  ia_prefixes.rs  leases.rs  mod.rs  ranges.rs  static_ips.rs  subnets.rs  tokens.rs
scripts/: fetch-freebsd-sysroot.sh  freebsd-cc.sh  freebsd-linker.sh
