[package]
name = "ndhcp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndhcpd = { path = "../ndhcpd" }
clap = { workspace = true }
tokio = { workspace = true }
hyper = { version = "1.5", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = { version = "0.9" }
http-body-util = "0.1"
tower-service = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
