[package]
name = "ndhcpd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ndhcpd"
path = "src/main.rs"

[dependencies]
dhcp-proto = { path = "../dhcp-proto" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa-swagger-ui = { workspace = true }
hyper = "1.5"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
clap.workspace = true
argon2 = "0.5.3"
base64 = "0.22.1"
getrandom = "0.4.1"
rand = "0.8"
async-trait.workspace = true
libc = "0.2"
